Update docs with new features

--- a/documentation/blog/2020-03-28-v0.7.3.md
+++ b/documentation/blog/2020-03-28-v0.7.3.md
@@ -9,3 +9,4 @@ tags: [releases, patch]
 ---
 
 * [DOCS] Update docs to include a complete example of custom methods [#64](https://github.com/doug-martin/nestjs-query/issues/64)
+* [FIXED] Issue where creating or updating allows specifying primary keys [#65](https://github.com/doug-martin/nestjs-query/issues/65)
