docs(sequelize): Add sequelize docs

--- a/documentation/docs/concepts/queries.mdx
+++ b/documentation/docs/concepts/queries.mdx
@@ -5,7 +5,7 @@ title: Queries
 import Tabs from '@theme/Tabs';
 import TabItem from '@theme/TabItem';
 
-The core of `nestjs-query` is the `Query`, it is used by both `@nestjs-query/query-graphql` and `@nestjs-query/query-typeorm`.
+The core of `nestjs-query` is the `Query`, it is used by both `@nestjs-query/query-graphql`, `@nestjs-query/query-typeorm` and `@nestjs-query/query-sequelize`.
 
 The query interface contains three optional fields.
 
