--- a/documentation/docs/introduction/example.mdx
+++ b/documentation/docs/introduction/example.mdx
@@ -6,7 +6,9 @@ import Tabs from '@theme/Tabs';
 import TabItem from '@theme/TabItem';
 import useBaseUrl from '@docusaurus/useBaseUrl';
 
-Let's create a simple todo-item graphql example.
+Let's create a simple todo-item graphql example using `typeorm`.
+
+[Click here to see a sequelize example!](https://github.com/doug-martin/nestjs-query/tree/master/examples/nest-graphql-sequelize)
 
 ## Set up a new nest app
 
